<resources>
    <string name="app_name">MePet</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="addreminder">Add Your Reminder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_references_here">Random References here</string>
    <string name="time">time</string>
    <string name="edit_pet_data">Edit Pet Data</string>
    <string name="home">Home</string>
    <string name="update">Update</string>
    <string name="warning_name">Name must be filled in</string>
    <string name="warning_age">Age must be filled in</string>
    <string name="cat_name">Cat Name</string>
    <string name="cat_info">Cat Info</string>
    <string name="cat_display_picture">cat display picture</string>
    <string name="cat_logo">cat logo</string>
    <string name="background_picture">background cat picture</string>
    <string name="reminder_pagi_example">07:00</string>
    <string name="reminder_siang_example">12:00</string>
    <string name="reminder_malam_example">20:00</string>
    <string name="edit_reminder_pagi">Change morning reminders</string>
    <string name="edit_reminder_siang">Change afternoon reminders</string>
    <string name="edit_reminder_malam">Change night reminders</string>
    <string name="tokopedia">Tokopedia</string>
    <string name="bukalapak">Bukalapak</string>
    <string name="shopee">Shopee</string>
    <string name="berhasil">Success!</string>

    <!--UI-->
    <string name="profile">Profile</string>
    <string name="references">References</string>
    <string name="by_chewie">By Chewie.</string>
    <string name="add_pet">Add Pet</string>
    <string name="meshop">MeShop</string>
    <string name="reminders">Reminders</string>
    <string name="reminder">Reminder</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="pet_name">Pet Name</string>
    <string name="age">Age</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="add">Add</string>
    <string name="dot">.</string>
    <string name="berat">%1$s Kg</string>
    <string name="next_reminder">Next \nReminder</string>
    <string name="food">Food</string>
    <string name="pagi">Morning</string>
    <string name="siang">Afternoon</string>
    <string name="malam">Night</string>
    <string name="weight">Weight</string>
    <string name="check">check</string>
    <string name="shop">Shop</string>
    <string name="next">Next</string>

    <!--About Us-->
    <string name="about_us">About Us</string>
    <string name="ceo">Fakhri MF\nCEO</string>
    <string name="gilang">Gilang S\nBack End</string>
    <string name="sulthon">Sulthon AN\nFront End</string>
    <string name="rifky">Rifky ZB\nFront End</string>
    <string name="visi">Make mepet as an application that can help people to take care of their animals with the features provided</string>
    <string name="misi">1. Pets become more manicured\n2. Looking for various information to produce a good application\n3. Update the features in the application\n4. Make layouts with designs that are attractive to users </string>
    <string name="company_name">CHEWIE CORPS</string>
    <string name="team">team</string>
    <string name="visititle">visi</string>
    <string name="misititle">misi</string>
    <string name="intro">intro</string>

    <!--Misc-->
    <string name="tap_to_exit">Tap twice to exit</string>
    <string name="add_pet_details">Add your pet details</string>
    <string name="cara_merawat_kucing">How to care for cats</string>
    <string name="teks_rawat">take care of pets properly</string>
    <string name="ob_3">Get your pet the best food they can get from our official store</string>
    <string name="ob_2_tittle">Getting closer</string>
    <string name="ob_2_content">Keep in touch with your pet everyday, and make them as the happiest pet ever</string>
    <string name="ob_1_content">Help you to keep your pet better than other</string>
    <string name="other_cat">Please enter cat type</string>
</resources>
