<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_references"
            android:icon="@drawable/ic_references"
            android:title="@string/references" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_time"
            android:title="@string/reminder" />
        <item
            android:id="@+id/nav_meshop"
            android:icon="@drawable/ic_meshop"
            android:title="@string/meshop" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_info"
            android:title="@string/about_us" />
        <!--<item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="Settings" />-->
    </group>

</menu>
