<?xml version="1.0" encoding="utf-8"?>
<!-- Cleaned by Fakhri MF -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_210sdp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tvCompanyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_thambi"
                android:text="@string/company_name"
                android:textAlignment="center"
                android:textColor="#fff"
                android:layout_marginTop="@dimen/_11sdp"
                android:textSize="@dimen/_29ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_thambi"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@+id/tvCompanyTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/teamContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_79sdp"
            android:elevation="@dimen/_6sdp"
            app:cardCornerRadius="@dimen/_7sdp"
            app:cardElevation="@dimen/_6sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_8sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivCEO"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/fakhri"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCEOName"
                    android:layout_width="@dimen/_52sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_thambi"
                    android:gravity="center"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/ceo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivCEO" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivBackendGilang"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/gilang"
                    app:layout_constraintStart_toEndOf="@+id/ivCEO"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvBackendGilang"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/baloo_thambi"
                    android:gravity="center"
                    android:text="@string/gilang"
                    app:layout_constraintStart_toEndOf="@+id/tvCEOName"
                    app:layout_constraintTop_toBottomOf="@+id/ivCEO" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivFrontEndSulthon"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:src="@drawable/sulthon"
                    app:layout_constraintStart_toEndOf="@id/ivBackendGilang"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvFrontEndSulthon"
                    android:layout_width="@dimen/_59sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/baloo_thambi"
                    android:gravity="center"
                    android:text="@string/sulthon"
                    app:layout_constraintStart_toEndOf="@+id/tvBackendGilang"
                    app:layout_constraintTop_toBottomOf="@+id/ivCEO" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivFrontEndRifky"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:src="@drawable/rifky"
                    app:layout_constraintStart_toEndOf="@+id/ivFrontEndSulthon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvFrontEndRifky"
                    android:layout_width="@dimen/_52sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/baloo_thambi"
                    android:gravity="center"
                    android:text="@string/rifky"
                    app:layout_constraintStart_toEndOf="@+id/tvFrontEndSulthon"
                    app:layout_constraintTop_toBottomOf="@+id/ivCEO" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/teamContainer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/_20sdp">

                <TextView
                    android:id="@+id/visi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/_15sdp"
                    android:fontFamily="@font/baloo_thambi"
                    android:text="@string/visititle"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/isivisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/visi"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:fontFamily="@font/baloo_thambi"
                    android:text="@string/visi"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/visi" />

                <TextView
                    android:id="@+id/misi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/isivisi"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/_15sdp"
                    android:fontFamily="@font/baloo_thambi"
                    android:text="@string/misititle"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/isivisi" />

                <TextView
                    android:id="@+id/isimisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/misi"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:fontFamily="@font/baloo_thambi"
                    android:text="@string/misi"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/misi" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>