<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model"
            type="com.chewie.mepet.model.ReferencesTipsModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".references.tips_references.ReferencesTipsDetailFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_detail_tips"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_226sdp"
                    android:contentDescription="@string/cat_info"
                    android:scaleType="centerCrop"
                    android:src="@drawable/smudge"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_226sdp"
                    android:background="#26000000"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_tips"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_9sdp"
                    android:layout_marginTop="@dimen/_170sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/baloo_thambi"
                    android:maxWidth="@dimen/_190sdp"
                    android:maxLines="3"
                    android:text="@{model.title}"
                    android:textColor="#fff"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/cara_merawat_kucing" />


                <TextView
                    android:id="@+id/detail_pet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_19sdp"
                    android:layout_marginTop="@dimen/_90sdp"
                    android:fontFamily="@font/baloo_thambi"
                    android:text="@{model.content}"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_detail_tips"
                    tools:text="@string/teks_rawat" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>